[gd_scene load_steps=22 format=2]

[ext_resource path="res://Textures/bg.png" type="Texture" id=1]
[ext_resource path="res://Font/pixeled/Pixeled.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menus/MenuPrincipal.gd" type="Script" id=3]
[ext_resource path="res://Escenas/Guardar/NG.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/score.png" type="Texture" id=5]
[ext_resource path="res://Textures/Black.png" type="Texture" id=6]
[ext_resource path="res://Textures/exit.png" type="Texture" id=7]
[ext_resource path="res://Music/Music2.wav" type="AudioStream" id=8]
[ext_resource path="res://Textures/info.png" type="Texture" id=9]
[ext_resource path="res://Escenas/SFX/SFX.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "megacolor"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1.10957, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0.25098, 1, 1 ), Color( 0, 1, 0.929412, 1 ), Color( 0, 0, 0, 1 ), Color( 0.313726, 1, 0, 1 ), Color( 0.478431, 0, 1, 1 ), Color( 1, 0.890196, 0, 1 ), Color( 0, 1, 0.788235, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.701961, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 30 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 1037.51, -163.989 )
scale = Vector2( 4.17015, 4.17015 )
texture = ExtResource( 1 )

[node name="Arar" type="Control" parent="."]
margin_left = -474.877
margin_top = -141.831
margin_right = -434.877
margin_bottom = -101.831
__meta__ = {
"_edit_use_anchors_": false
}

[node name="black" type="Label" parent="Arar"]
margin_left = 522.296
margin_top = 155.683
margin_right = 714.296
margin_bottom = 290.683
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Arar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="white" type="Label" parent="Arar"]
margin_left = 519.296
margin_top = 153.433
margin_right = 711.296
margin_bottom = 288.433
custom_fonts/font = SubResource( 1 )
text = "Arar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="Arar"]
anims/megacolor = SubResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -84.2998, 38.7794 )
scale = Vector2( 7.08687, 7.08687 )
shape = SubResource( 3 )
passby_press = true

[node name="Play" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.515438 )
position = Vector2( 128, 192 )

[node name="black" type="Label" parent="Play"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = -0.121
margin_left = 2.0
margin_top = 2.0
margin_right = 339.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
text = "Touch the Screen to play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="white" type="Label" parent="Play"]
anchor_top = -0.121
margin_right = 337.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
text = "Touch the Screen to play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="Play"]
anims/anim = SubResource( 5 )

[node name="exit" type="TouchScreenButton" parent="."]
scale = Vector2( 2, 2 )
normal = ExtResource( 7 )
shape = SubResource( 6 )

[node name="info" type="TouchScreenButton" parent="."]
position = Vector2( 48, 0 )
scale = Vector2( 2, 2 )
normal = ExtResource( 9 )
shape = SubResource( 7 )

[node name="scoreandother" type="TouchScreenButton" parent="."]
position = Vector2( 96, 0 )
scale = Vector2( 2, 2 )
normal = ExtResource( 5 )
shape = SubResource( 7 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="black" type="Sprite" parent="canvas"]
visible = false
position = Vector2( 260, 150 )
scale = Vector2( 9.25, 5.6875 )
texture = ExtResource( 6 )

[node name="Animation" type="AnimationPlayer" parent="canvas/black"]
anims/anim = SubResource( 8 )

[node name="Animation3" type="AnimationPlayer" parent="canvas/black"]
anims/anim = SubResource( 9 )

[node name="Animation2" type="AnimationPlayer" parent="canvas/black"]
anims/anim = SubResource( 10 )

[node name="Music" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource( 8 )
volume_db = -53.3333

[node name="Animation" type="AnimationPlayer" parent="Music/Music"]
anims/anim = SubResource( 11 )

[node name="SFX" parent="." instance=ExtResource( 10 )]

[node name="NG" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="scoreandother" to="." method="_on_info2_pressed"]
[connection signal="animation_finished" from="canvas/black/Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="animation_finished" from="canvas/black/Animation3" to="." method="_on_Animation3_animation_finished"]
[connection signal="animation_finished" from="canvas/black/Animation2" to="." method="_on_Animation2_animation_finished"]
[connection signal="finished" from="Music/Music" to="." method="_on_Music_finished"]
